# valence-services

./: Cargo.toml  LICENSE  README.md  architecture.md  test.json
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  release.yml
contracts/account/: Cargo.toml  README.md
contracts/account/schema/: valence-account.json
contracts/account/src/: contract.rs  error.rs  msg.rs
contracts/auction/auction/: Cargo.toml  README.md
contracts/auction/auction/schema/: auction.json
contracts/auction/auction/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/auction/auctions_manager/: Cargo.toml  README.md
contracts/auction/auctions_manager/schema/: auctions-manager.json
contracts/auction/auctions_manager/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/auction/price_oracle/: Cargo.toml  README.md
contracts/auction/price_oracle/schema/: price-oracle.json
contracts/auction/price_oracle/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/services-manager/: Cargo.toml  README.md
contracts/services-manager/src/: contract.rs  error.rs  helpers.rs  state.rs
contracts/services/rebalancer/: Cargo.toml  README.md
contracts/services/rebalancer/schema/: rebalancer.json
contracts/services/rebalancer/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  rebalance.rs  state.rs
contracts/services_manager/: Cargo.toml  README.md
contracts/services_manager/schema/: services-manager.json
contracts/services_manager/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
devtools/: optimize.sh  schema.sh
guides/: rebalancer_user_guide.md
scripts/: README.md  add_astro_path_to_oracle.sh  add_service_to_manager.sh  auction_funds.sh  general_commands.txt  init.sh  migrate.sh  new_auction.sh  register_to_service.sh  system.sh  temp.sh  update_oracle_addr.sh  update_price.sh  upload.sh
tests/rust-tests/: Cargo.toml
tests/rust-tests/src/: lib.rs  test_service_management.rs
tests/rust-tests/src/live_debugging/: helpers.rs  mod.rs  suite_builder.rs  suite_helpers.rs  test_specific_config.rs  types.rs
tests/rust-tests/src/suite/: builder_astro.rs  contracts.rs  mod.rs  suite.rs  suite_auction.rs  suite_builder.rs
tests/rust-tests/src/suite/instantiates/: account.rs  astro_factory.rs  astro_pair.rs  astro_registery.rs  auction.rs  auctions_manager.rs  mod.rs  oracle.rs  rebalancer.rs  services_manager.rs
tests/rust-tests/src/tests_account/: test_account.rs
tests/rust-tests/src/tests_auctions/: mod.rs  test_astro.rs  test_auction.rs  test_auctions_manager.rs  test_full_auctions.rs  test_instantiates.rs  test_oracle.rs  test_withdraw.rs
tests/rust-tests/src/tests_auctions/suite/: suite.rs  suite_builder.rs
tests/rust-tests/src/tests_rebalancer/: mod.rs  pid_tunning.rs  test_limits.rs  test_management.rs  test_rebalancing.rs  test_system.rs  tests_unit.rs
