[workspace]
resolver = "2"
members = [
  "packages/*",
  "contracts/services/*",
  "contracts/services_manager/",
  "contracts/account/",
  "contracts/auction/*",
  "tests/rust-tests",
]

[workspace.package]
edition    = "2021"
license    = "BSL"
version    = "0.1.6"
repository = "https://github.com/timewave-computer/valence-services"

rust-version = "1.66"

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true    # very important, do not turn these off.
panic            = 'abort'
rpath            = false

[workspace.dependencies]
# Contracts
valence-account  = { path = "contracts/account", features = ["library"] }
rebalancer       = { path = "contracts/services/rebalancer", features = ["library"] }
services-manager = { path = "contracts/services_manager", features = ["library"] }

# Auction related contracts
auctions-manager = { path = "contracts/auction/auctions_manager", features = ["library"] }
auction          = { path = "contracts/auction/auction", features = ["library"] }
price-oracle     = { path = "contracts/auction/price_oracle", features = ["library"] }

# packages
valence-macros  = { path = "packages/valence-macros" }
valence-package = { path = "packages/valence-package" }
auction-package = { path = "packages/auction-package" }

cosmwasm-schema = "1.5.5"
cosmwasm-std    = { version = "1.5.5", features = ["ibc3"] }
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
cw2             = "1.1.2"
serde           = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
schemars        = "0.8.10"

# dev-dependencies
cw-multi-test = "1.2.0"
anyhow        = { version = "1.0.51" }
