[package]
name        = "valence-account"
authors     = ["Art3miX <r3mix.il@gmail.com>"]
description = "Treasury management contract for Valence products"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }

rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# disables #[entry_point] (i.e. instantiate/execute/query) export
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
valence-macros  = { workspace = true }
valence-package = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow        = { workspace = true }
