[package]
name        = "valence-tests"
version     = "0.0.1"
edition     = "2021"
authors     = ["Art3miX <r3mix.il@gmail.com>"]
description = "Package that is only meant for testing contracts in this workspace"
license     = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw-multi-test   = { workspace = true }
cw-storage-plus = { workspace = true }

thiserror = { workspace = true }
anyhow    = { workspace = true }
colored   = "2.0.4"
textplots = "0.8"
rgb       = "0.8.36"

valence-account  = { workspace = true }
services-manager = { workspace = true }
rebalancer       = { workspace = true }
valence-package  = { workspace = true }

# Auction related packages/contracts
auction-package  = { workspace = true }
auctions-manager = { workspace = true }
auction          = { workspace = true }
price-oracle     = { workspace = true }
