[package]
name        = "valence-tests"
version     = { workspace = true }
edition     = { workspace = true }
authors     = ["Art3miX <r3mix.il@gmail.com>"]
description = "Package that is only meant for testing contracts in this workspace"
license     = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw-multi-test   = { workspace = true }
cw-storage-plus = { workspace = true }

thiserror = { workspace = true }
anyhow    = { workspace = true }
colored   = "2.0.4"
textplots = "0.8"
rgb       = "0.8.36"
rand      = "0.8.5"

valence-account  = { workspace = true }
services-manager = { workspace = true }
rebalancer       = { workspace = true }
valence-package  = { workspace = true }

# Auction related packages/contracts
auction-package  = { workspace = true }
auctions-manager = { workspace = true }
auction          = { workspace = true }
price-oracle     = { workspace = true }

# Astro
astroport                      = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-token                = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-whitelist            = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-factory              = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-native-coin-registry = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-pair-stable          = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
astroport-pair                 = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.9.5" }
